# clean-code-tools

./: .coverage  .fallowrc.json  .gitignore  AGENTS.md  CODEX_HANDOFF.md  README.md  build_vector_records.py  clean-code-examples.md  clean-code-patterns.jsonl  eslint.config.mjs  knip.json  package-lock.json  package.json  pyproject.toml  rag-mcp-design.md  vector-record.schema.json
.github/workflows/: ci.yml  creators-agent-deploy.yml  creators-agent-mcp-deploy.yml  publish-main.yml  version-develop.yml
configs/: eslint.clean-code.recommended.mjs  python.clean-code.pyproject.toml
data/: clean-code-patterns.jsonl  vector-record.schema.json
docs/: README.md  clean-code-mcp-agent-plan.md  eslint-custom-rules.md  eslint-recommended-config.md  fastmcp-local-server.md  publishing.md  python-lint-recommended-config.md  python-pylint-custom-rules.md  python-ruff-custom-rules-research.md  semantic-sqlite-vec.md  semantic-weaviate.md  static-trigger-semantic-review.md
evals/: clean-code-retrieval.jsonl
ops/dev/weaviate/: README.md  compose.yaml  smoke.sh
sample-apps/: README.md
sample-apps/python-app/: pyproject.toml
sample-apps/python-app/src/: clean_pricing.py  smelly_pricing.py
sample-apps/ts-backend/: eslint.config.mjs  package.json  tsconfig.json
sample-apps/ts-backend/src/: clean-handler.ts  smelly-handler.ts
sample-apps/ts-frontend/: package.json  tsconfig.json
sample-apps/ts-frontend/src/: CleanWidget.tsx  SmellyWidget.tsx
scripts/: _mcp_app.py  check_clean_code_review_candidates.py  check_fastmcp_server.py  check_packages.py  check_python_config.py  check_repo_python_lint.py  check_retrieval_evals.py  check_sample_apps.py  check_semantic_search_tooling.py  clean_code_eslint_triggers.py  clean_code_python_triggers.py  clean_code_review_candidates.py  clean_code_review_io.py  clean_code_review_models.py  clean_code_semantic.py  clean_code_trigger_catalog.py  install_codex_skill.py  set_package_versions.py  sqlite_vec_search_clean_code.py  weaviate_search_clean_code.py
skills/clean-code-mcp-reviewer/: .dockerignore  Dockerfile  SKILL.md  compose.yaml
skills/clean-code-mcp-reviewer/evals/: evals.json
skills/clean-code-mcp-reviewer/hooks/: clean_code_agent_feedback.py
skills/clean-code-mcp-reviewer/runtime/scripts/: _mcp_app.py  clean_code_mcp_server.py  docker_init_weaviate.py  docker_mcp_server.py  sqlite_vec_ingest_clean_code.py  weaviate_ingest_clean_code.py
skills/clean-code-mcp-reviewer/runtime/src/python/mcp_server/: custom_pattern_tools.py  custom_patterns.py  markdown.py  pattern_lookup.py  pattern_models.py  ranking.py  ranking_scoring.py  semantic.py  server.py  server_payloads.py  sqlite_vec_store.py  weaviate.py
skills/clean-code-mcp-reviewer/runtime/src/python/mcp_server/utils/: increment.py
skills/clean-code-mcp-reviewer/scripts/: install_clean_code_linting.py
skills/clean-code-mcp-reviewer/templates/: python.clean-code.pyproject.toml
skills/clean-code-tools/: SKILL.md
skills/clean-code-tools/catalog/: clean_code_review_triggers.json
skills/clean-code-tools/evals/: evals.json
skills/clean-code-tools/hooks/: clean_code_agent_feedback.py
skills/clean-code-tools/references/: installation.md
skills/clean-code-tools/runtime/src/python/mcp_server/: custom_patterns.py  models.py  pattern_chunks.py  pattern_models.py  semantic.py  server.py
skills/clean-code-tools/runtime/src/python/mcp_server/utils/: sha256_text.py
skills/clean-code-tools/scripts/: install_clean_code_linting.py
src/: eslint-plugin-clean-code.mjs
src/js/: eslint-plugin-clean-code.mjs
src/mcp_server/: corpus.py  markdown.py  ranking.py  ranking_scoring.py  semantic.py  server.py  server_payloads.py  weaviate.py
src/mcp_server/utils/: increment.py
src/python/clean_code_tools_pylint/: __init__.py  ast_checker.py  comments.py  helpers.py
src/python/mcp_server/: corpus.py  custom_pattern_tools.py  ranking.py  semantic.py  text.py
src/python/mcp_server/utils/: httpx_loader.py  unique_strings.py
tests/: eslint-config-integration.test.mjs  eslint-plugin-clean-code.test.mjs
tests/python/: clean_code_agent_feedback_test.py  custom_patterns_test.py  install_clean_code_linting_test.py  install_codex_skill_test.py  ranking_test.py  skill_docs_test.py
