#:schema https://json.schemastore.org/pyproject.json

[project]
name = "clean-code-tools-python"
version = "0.1.0"
description = "Python tooling for clean-code semantic search and local MCP access."
requires-python = ">=3.12"
dependencies = [
  "fastembed>=0.8.0",
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
]

[dependency-groups]
lint = [
  "ruff>=0.15.0",
  "pylint>=4.0.0",
]
typecheck = [
  "pyright>=1.1.403",
]

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true
show-fixes = true
output-format = "grouped"
extend-exclude = [
  ".git",
  ".mypy_cache",
  ".nox",
  ".ruff_cache",
  ".tox",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "node_modules",
  "sample-apps",
]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "SIM",
  "RET",
  "PTH",
  "TID",
  "RUF",
  "S",
  "BLE",
  "A",
  "G",
  "TRY",
  "FA",
  "ISC",
  "ICN",
  "PIE",
  "T20",
  "Q",
  "RSE",
  "PERF",
  "FURB",
  "LOG",
  "FBT",
  "COM",
  "INP",
  "ARG",
  "ERA",
  "TD",
  "PGH",
  "PL",
  "PYI",
]
ignore = [
  "E501",
  "COM812",
  "ISC001",
  "TD001",
]
fixable = [
  "E",
  "W",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "SIM",
  "RET",
  "PTH",
  "TID",
  "RUF",
  "S",
  "BLE",
  "A",
  "G",
  "TRY",
  "FA",
  "ISC",
  "ICN",
  "PIE",
  "T20",
  "Q",
  "RSE",
  "PERF",
  "FURB",
  "LOG",
  "FBT",
  "COM",
  "INP",
  "ARG",
  "PGH",
  "PL",
  "PYI",
]
unfixable = [
  "ERA",
  "TD",
  "PLR2004",
]

[tool.ruff.lint.isort]
known-first-party = []
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = [
  "T201",
]
"scripts/check_*.py" = [
  "S101",
  "PLC0415",
  "S603",
  "TRY003",
  "FBT001",
  "FBT002",
  "PLR2004",
]
"scripts/_mcp_app.py" = [
  "TRY003",
]
"scripts/weaviate_ingest_clean_code.py" = [
  "TRY003",
]
"scripts/weaviate_search_clean_code.py" = [
  "TRY003",
]
"src/mcp_server/server.py" = [
  "PLC0415",
  "PLR0913",
  "TRY003",
]
"src/mcp_server/semantic.py" = [
  "PLC0415",
  "TRY003",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pylint.main]
py-version = "3.12"
jobs = 0
recursive = true
ignore-paths = [
  "^\\.venv/.*$",
  "^build/.*$",
  "^dist/.*$",
  "^node_modules/.*$",
  "^sample-apps/.*$",
]

[tool.pylint."messages control"]
disable = [
  "all",
]
enable = [
  "cyclic-import",
  "duplicate-code",
  "import-error",
  "too-many-ancestors",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-lines",
  "too-many-locals",
  "too-many-nested-blocks",
  "too-many-public-methods",
  "too-many-return-statements",
  "too-many-statements",
  "too-many-boolean-expressions",
  "too-few-public-methods",
]

[tool.pylint.design]
max-args = 5
max-attributes = 8
max-bool-expr = 5
max-branches = 12
max-locals = 15
max-nested-blocks = 4
max-public-methods = 20
max-returns = 6
max-statements = 50
max-parents = 7
min-public-methods = 1

[tool.pylint.format]
max-line-length = 100
max-module-lines = 1000

[tool.pylint.imports]
allow-any-import-level = []

[tool.pylint.reports]
score = false

[tool.pyright]
include = ["src/mcp_server", "scripts"]
exclude = [
  "**/__pycache__",
  "**/.venv",
  "**/.pytest_cache",
  "**/.ruff_cache",
  "node_modules",
  "sample-apps",
]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportUnusedImport = "error"
reportUnusedVariable = "warning"
reportPrivateUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnusedFunction = "warning"
