#:schema https://json.schemastore.org/pyproject.json

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "clean-code-tools-python"
version = "1.0.5"
description = "Python clean-code lint plugin and recommended Ruff/Pylint config."
readme = "README.md"
requires-python = ">=3.12"
keywords = [
  "clean-code",
  "pylint",
  "ruff",
  "static-analysis",
]
dependencies = [
  "pylint>=4.0.0",
  "ruff>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/wnz99/clean-code-tools"
Repository = "https://github.com/wnz99/clean-code-tools"
Issues = "https://github.com/wnz99/clean-code-tools/issues"
Documentation = "https://github.com/wnz99/clean-code-tools/tree/main/docs"

[dependency-groups]
lint = [
  "ruff>=0.15.0",
  "pylint>=4.0.0",
]
mcp = [
  "fastembed>=0.8.0",
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
]
typecheck = [
  "pyright>=1.1.403",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python/clean_code_tools_pylint"]

[tool.hatch.build.targets.wheel.force-include]
"configs/python.clean-code.pyproject.toml" = "clean_code_tools_pylint/configs/python.clean-code.pyproject.toml"

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "pyproject.toml",
  "configs/python.clean-code.pyproject.toml",
  "src/python/clean_code_tools_pylint/*.py",
]
exclude = [
  ".github",
  "data",
  "docs",
  "evals",
  "ops",
  "sample-apps",
  "scripts",
  "skills",
  "src/js",
  "src/python/mcp_server",
  "tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true
show-fixes = true
output-format = "grouped"
extend-exclude = [
  ".git",
  ".mypy_cache",
  ".nox",
  ".ruff_cache",
  ".tox",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "node_modules",
  "sample-apps",
]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "SIM",
  "RET",
  "PTH",
  "TID",
  "RUF",
  "S",
  "BLE",
  "A",
  "G",
  "TRY",
  "FA",
  "ISC",
  "ICN",
  "PIE",
  "T20",
  "Q",
  "RSE",
  "PERF",
  "FURB",
  "LOG",
  "FBT",
  "COM",
  "INP",
  "ARG",
  "ERA",
  "TD",
  "PGH",
  "PL",
  "PYI",
]
ignore = [
  "E501",
  "COM812",
  "ISC001",
  "TD001",
]
fixable = [
  "E",
  "W",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "SIM",
  "RET",
  "PTH",
  "TID",
  "RUF",
  "S",
  "BLE",
  "A",
  "G",
  "TRY",
  "FA",
  "ISC",
  "ICN",
  "PIE",
  "T20",
  "Q",
  "RSE",
  "PERF",
  "FURB",
  "LOG",
  "FBT",
  "COM",
  "INP",
  "ARG",
  "PGH",
  "PL",
  "PYI",
]
unfixable = [
  "ERA",
  "TD",
  "PLR2004",
]

[tool.ruff.lint.isort]
known-first-party = []
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = [
  "T201",
]
"scripts/check_*.py" = [
  "S101",
  "PLC0415",
  "S603",
  "TRY003",
  "FBT001",
  "FBT002",
  "PLR2004",
]
"scripts/clean_code_eslint_triggers.py" = [
  "INP001",
]
"scripts/clean_code_python_triggers.py" = [
  "INP001",
]
"scripts/clean_code_review_io.py" = [
  "INP001",
]
"scripts/clean_code_review_models.py" = [
  "INP001",
]
"scripts/set_package_versions.py" = [
  "TRY003",
]
"scripts/_mcp_app.py" = [
  "TRY003",
]
"scripts/weaviate_ingest_clean_code.py" = [
  "TRY003",
]
"scripts/weaviate_search_clean_code.py" = [
  "TRY003",
]
"src/python/mcp_server/server.py" = [
  "PLC0415",
  "PLR0913",
  "TRY003",
]
"src/python/mcp_server/semantic.py" = [
  "PLC0415",
  "TRY003",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pylint.main]
py-version = "3.12"
jobs = 0
recursive = true
load-plugins = [
  "clean_code_tools_pylint",
]
ignore-paths = [
  "^\\.venv/.*$",
  "^build/.*$",
  "^dist/.*$",
  "^node_modules/.*$",
  "^sample-apps/.*$",
]

[tool.pylint."messages control"]
disable = [
  "all",
]
enable = [
  "cyclic-import",
  "clean-code-boolean-flag-argument",
  "clean-code-business-policy-literal",
  "clean-code-commented-out-code",
  "clean-code-noisy-comment",
  "clean-code-output-argument-mutation",
  "clean-code-redundant-comment",
  "clean-code-todo-format",
  "clean-code-train-wreck",
  "duplicate-code",
  "import-error",
  "too-many-ancestors",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-lines",
  "too-many-locals",
  "too-many-nested-blocks",
  "too-many-public-methods",
  "too-many-return-statements",
  "too-many-statements",
  "too-many-boolean-expressions",
  "too-few-public-methods",
]

[tool.pylint.design]
max-args = 5
max-attributes = 7
max-bool-expr = 5
max-branches = 12
max-locals = 15
max-nested-blocks = 4
max-public-methods = 12
max-returns = 6
max-statements = 40
max-parents = 7
min-public-methods = 1

[tool.pylint.format]
max-line-length = 100
max-module-lines = 300

[tool.pylint.imports]
allow-any-import-level = []

[tool.pylint.reports]
score = false

[tool.pyright]
include = ["src/python/clean_code_tools_pylint", "src/python/mcp_server", "scripts"]
extraPaths = ["src/python"]
exclude = [
  "**/__pycache__",
  "**/.venv",
  "**/.pytest_cache",
  "**/.ruff_cache",
  "node_modules",
  "sample-apps",
]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportUnusedImport = "error"
reportUnusedVariable = "warning"
reportPrivateUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnusedFunction = "warning"
